--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     />
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body>
-    <div class="main-div d-flex flex-column pt-4" id="insertbg">
-      <div class="d-flex justify-content-end pb-4 px-4 w-100">
+  <body class="main-div " id="insertbg">
+    <div class="d-flex flex-column h-100" >
+      <div class="d-flex justify-content-end px-4 py-3 py-md-4 w-100">
         <div
           class="dark-Mode d-flex justify-content-center align-items-center border border-1 rounded-2"
           id="modes"
